Fix written time stamp in QML cache files for QRC sources

For loading and verification we compare against the time stamp of the
executable, so we should do the same thing when generating the cache
data.

Task-number: QTBUG-55926
Change-Id: If5922e76b8ae86185f6eacb6aeeb5c3afbc1f8d5
Reviewed-by: Erik Verbruggen <erik.verbruggen@qt.io>